# vantageadapt

./: .gitignore  CHANGELOG.md  Dockerfile.api  Dockerfile.grafana  LICENSE  README.md  VERSION  VERSION.md  __init__.py  analysis_results.json  backtester.py  docker-compose.simple.yml  docker-compose.test.yml  docker-compose.yml  findings.md  main.py  pyproject.toml  requirements.txt  test_mem0.py  test_prompt_system.py
config/: __init__.py  (+1 more)
trading_dspy/: CLAUDE.md  CLEAR_RESULTS_BY_SYSTEM.md  KAGAN_EVALUATION_REPORT.md  KAGAN_EVALUATION_SUMMARY.md  KATES_10_API_RESEARCH.md  OPTIMIZATION_FIXES_SUMMARY.md  README.md  REAL_ML_SYSTEM_OVERVIEW.md  RESULTS_SUMMARY.md  SYSTEM_STATUS_REPORT.md  adaptive_crypto_trader.py  aggressive_results_summary.json  alpaca_aggressive.py  alpaca_crypto_trader.py  alpaca_fixed.py  alpaca_fixed_data.py  alpaca_instant_trades.py  alpaca_paper_trader.py  browser_trader.py  check_dashboard.py  check_positions.py  check_progress.sh  check_status.py  crypto_instant_trader.py  crypto_test_all_methods.py  darwin_godel_evolution.py  debug_backtest.py  debug_full_backtest.py  debug_hyperparameter_optimizer.py  debug_optimization.py  debug_vectorbt_direct.py  demo_kagan_vision.py  direct_backtest.py  dspy_archaeology_report.md  emergency_check_positions.py  evaluate_10_percent_kagan.py  evaluate_for_kagan.py  final_kagan_evaluation.py  final_real_ml_system.py  generate_examples.py  (+76 more)
trading_dspy/.context/: docs.md  index.md
trading_dspy/checkpoints/: master_coordinator_20250603_191356.json  master_coordinator_20250603_192735.json  master_coordinator_20250603_193234.json  master_coordinator_20250603_194759.json  master_coordinator_20250603_200120.json  master_coordinator_20250603_201235.json  master_coordinator_20250603_203059.json  master_coordinator_20250603_203848.json  master_coordinator_20250603_210331.json  master_coordinator_20250603_212849.json  master_coordinator_20250603_215232.json  master_coordinator_20250603_220204.json  master_coordinator_20250603_221341.json  master_coordinator_20250603_222017.json  master_coordinator_20250603_222421.json  master_coordinator_20250603_223346.json  master_coordinator_20250603_224430.json  master_coordinator_20250603_224556.json  master_coordinator_20250603_225819.json  master_coordinator_20250603_230714.json  (+9 more)
(+2487 files in other folders)
